--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-import streamlit as st
-import pandas as pd
-import numpy as np
-import geopandas as gpd
-import matplotlib.pyplot as plt
-from shapely.geometry import Point, Polygon, MultiPolygon
-from scipy.spatial import ConvexHull, convex_hull_plot_2d
-from scipy.spatial import Voronoi, voronoi_plot_2d
-import folium as fl
+streamlit
+pandas
+numpy
+geopandas
+matplotlib.pyplot
+shapely
+scipy
+folium
