--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,112 @@
-streamlit
+time
 pandas
 numpy
 geopandas
 matplotlib
-shapely
-scipy
-folium
 plotly
+alabaster==0.7.12
+arcade==2.5.6
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==21.2.0
+Babel==2.9.0
+backcall==0.2.0
+bleach==3.3.0
+branca==0.4.2
+shapely
+Brotli==1.0.9
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+colorama==0.4.4
+dash==1.20.0
+dash-core-components==1.16.0
+dash-html-components==1.1.3
+dash-renderer==1.9.1
+dash-table==4.11.3
+decorator==5.0.9
+defusedxml==0.7.1
+docutils==0.16
+entrypoints==0.3
+folium==0.12.1
+future==0.18.2
+idna==2.10
+imagesize==1.2.0
+ipykernel==5.5.5
+ipython==7.23.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+itsdangerous==1.1.0
+jedi==0.18.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+MarkupSafe==1.1.1
+matplotlib-inline==0.1.2
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+nmap==0.0.1
+notebook==6.4.0
+numpy==1.20.1
+packaging==20.8
+pandas==1.2.4
+pandocfilters==1.4.3
+parso==0.8.2
+pickleshare==0.7.5
+Pillow==8.2.0
+plotly==4.14.3
+prometheus-client==0.10.1
+prompt-toolkit==3.0.18
+pycparser==2.20
+pyglet==1.5.16
+Pygments==2.7.3
+pymunk==6.0.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+python-nmap==0.6.1
+python3-nmap==1.4.9
+pytiled-parser==0.9.4a3
+pytz==2020.5
+pywin32==300
+pywinpty==1.1.1
+PyYAML==5.4.1
+pyzmq==22.1.0
+qtconsole==5.1.0
+QtPy==1.9.0
+requests==2.25.1
+retrying==1.3.3
+Send2Trash==1.5.0
+Shapely==1.7.1
+simplejson==3.17.2
+six==1.15.0
+streamlit
+scipy
+snowballstemmer==2.0.0
+Sphinx==3.4.3
+sphinx-rtd-theme==0.5.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+terminado==0.10.0
+testpath==0.5.0
+tornado==6.1
+traitlets==5.0.5
+urllib3==1.26.2
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+wsl==0.12
